<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/primary_color"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="224dp"
        tools:layout_editor_absoluteY="215dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_welcome"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="91dp"
        tools:layout_editor_absoluteY="215dp" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/hint_login_senha"
        android:inputType="@string/hint_login_senha"
        android:paddingStart="10dp"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="345dp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/hint_login_email"
        android:inputType="@string/hint_login_email"
        android:paddingStart="10dp"
        tools:layout_editor_absoluteX="102dp"
        tools:layout_editor_absoluteY="272dp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/primary_color"
        android:text="@string/btn_login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="110dp"
        tools:layout_editor_absoluteY="456dp" />

</androidx.constraintlayout.widget.ConstraintLayout>