<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/primary_color"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="157dp"
        tools:layout_editor_absoluteY="46dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_home_choosecategory"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="58dp"
        tools:layout_editor_absoluteY="100dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/primary_color"
        android:text="@string/btn_logout"
        android:textAllCaps="false"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="627dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/popular"
        tools:layout_editor_absoluteX="58dp"
        tools:layout_editor_absoluteY="151dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_1"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="178dp"
        tools:layout_editor_absoluteY="196dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/top_rated"
        tools:layout_editor_absoluteX="58dp"
        tools:layout_editor_absoluteY="299dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_2"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="186dp"
        tools:layout_editor_absoluteY="356dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_3"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="185dp"
        tools:layout_editor_absoluteY="507dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/upcoming"
        tools:layout_editor_absoluteX="57dp"
        tools:layout_editor_absoluteY="458dp" />

</androidx.constraintlayout.widget.ConstraintLayout>