<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="95dp"
        android:text="@string/category_3"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_voltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="60dp"
        android:background="@color/primary_color"
        android:text="@string/btn_back"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/img_movie_5"
        android:layout_width="140dp"
        android:layout_height="180dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/title_movie_9"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/furiosa" />

    <TextView
        android:id="@+id/title_movie_5"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/title_movie_9"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/img_movie_5"
        app:layout_constraintStart_toStartOf="@+id/img_movie_5"
        app:layout_constraintTop_toBottomOf="@+id/img_movie_5" />

    <ImageButton
        android:id="@+id/img_movie_6"
        android:layout_width="140dp"
        android:layout_height="180dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/title_movie_10"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/garfield" />

    <TextView
        android:id="@+id/title_movie_6"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/title_movie_10"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/img_movie_6"
        app:layout_constraintStart_toStartOf="@+id/img_movie_6"
        app:layout_constraintTop_toBottomOf="@+id/img_movie_6" />

    <ImageButton
        android:id="@+id/img_movie_7"
        android:layout_width="140dp"
        android:layout_height="180dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/title_movie_11"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_movie_5"
        app:srcCompat="@drawable/divertidamente2" />

    <TextView
        android:id="@+id/title_movie_8"
        android:layout_width="143dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:text="@string/title_movie_12"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/img_movie_8"
        app:layout_constraintStart_toStartOf="@+id/img_movie_8"
        app:layout_constraintTop_toBottomOf="@+id/img_movie_8" />

    <ImageButton
        android:id="@+id/img_movie_8"
        android:layout_width="140dp"
        android:layout_height="180dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/title_movie_12"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_movie_6"
        app:srcCompat="@drawable/rivais" />

    <TextView
        android:id="@+id/title_movie_7"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/title_movie_11"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/img_movie_7"
        app:layout_constraintStart_toStartOf="@+id/img_movie_7"
        app:layout_constraintTop_toBottomOf="@+id/img_movie_7" />

</androidx.constraintlayout.widget.ConstraintLayout>